--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
+		<link rel="shortcut icon" type="image/x-icon" href="https://github.com/clear1991499/clear1991499.github.io/_layouts/favicon.ico">
+		<link rel="apple-touch-icon" sizes="180x180" href="https://github.com/clear1991499/clear1991499.github.io/_layouts/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="192x192" href="https://github.com/clear1991499/clear1991499.github.io/_layouts/android-chrome-192x192.png">
 	</head>
 </html>
