--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="https://clear1991499.github.io/icon/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://clear1991499.github.io/icon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://clear1991499.github.io/icon/favicon-32x32.png">
     <link rel="apple-touch-icon" sizes="180x180" href="https://clear1991499.github.io/icon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="192x192" href="https://clear1991499.github.io/icon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="https://clear1991499.github.io/icon/android-chrome-256x256.png">
 
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
